--- a/LYSL.Data/LYSL.Data.csproj
+++ b/LYSL.Data/LYSL.Data.csproj
@@ -5,6 +5,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20200721004235_add migration.cs" />
+    <Compile Remove="Migrations\20200721004235_add migration.Designer.cs" />
+    <Compile Remove="Migrations\20200721012949_Location relocate.cs" />
+    <Compile Remove="Migrations\20200721012949_Location relocate.Designer.cs" />
+    <Compile Remove="Migrations\20200721013607_add location value in pet.cs" />
+    <Compile Remove="Migrations\20200721013607_add location value in pet.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="AutoMapper" Version="10.0.0" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.5" />
